syntax = "proto3";

package mail;

option go_package = "github.com/nik19ta/gostat/proto/mail";

service MailService {
  rpc SendMail (SendMailRequest) returns (SendMailResponse) {}
}

message SendMailRequest {
  string email = 1;
  string first_name = 2;
  string second_name = 3;
  string secret_code = 4;
}

message SendMailResponse {
  bool status = 1;
}